--- a/portfolio.html
+++ b/portfolio.html
@@ -49,12 +49,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Mohd<strong>Saquib</strong></a>
+          <a class="navbar-brand" href="index.html">Mohd<strong>Saquib</strong></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="../navbar/">Home</a></li>
-            <li><a href="index.html">Blog<span class="sr-only">(current)</span></a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="blog.html">Blog<span class="sr-only">(current)</span></a></li>
             <li><a href="about.html">About</a></li>
             <li class="active"><a href="portfolio.html">Portfolio</a></li>
           </ul>
