some minor changes

--- a/about.html
+++ b/about.html
@@ -88,7 +88,7 @@
     <footer class="blog-footer">
       <p>© 2017 Mohd Saquib. Have any questions or just want to drop me a line? Email me at <a href="mailto:msaquibmax@gmail.com" target="_blank">msaquibmax@gmail.com</a></p>
       <p>
-        <a href="#blog-page">Back to top</a>
+        <a href="#">Back to top</a>
       </p>
     </footer>
 
