--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     </div>
 
     <div class="container blog-main">
-      <p id="first-paragraph-home">I am a Science Student at <a href="http://jmicoe.in/" target="_blank">Jamia Millia Islamia</a>, New Delhi. Head over to my <a href="blog.html">blog</a> to read some ineteresting content.</p>
+      <p id="first-paragraph-home">I am a Science Student at <a href="http://jmicoe.in/" target="_blank">Jamia Millia Islamia</a>, New Delhi. Head over to my <a href="blog.html">blog</a> to read some interesting content.</p>
     </div>
 
     <footer class="blog-footer">
