--- a/portfolio.html
+++ b/portfolio.html
@@ -65,20 +65,6 @@
     <div id="blog-page">
       <div class="container">
 
-        <div class="example">
-          <p>Div 1</p>
-        </div>
-
-        <div class="example">
-          <p>Div 2</p>
-        </div>
-
-        <div class="example">
-          <p>Div 3</p>
-        </div>
-
-        <p class="clear"> this is some extra text</p>
-
         <div class="row-example">
 
           <div class="example-2">
@@ -113,7 +99,7 @@
     <footer class="blog-footer">
       <p>© 2017 Mohd Saquib. Have any questions or just want to drop me a line? Email me at <a href="mailto:msaquibmax@gmail.com" target="_blank">msaquibmax@gmail.com</a></p>
       <p>
-        <a href="#blog-page">Back to top</a>
+        <a href="#">Back to top</a>
       </p>
     </footer>
 
